# poly-maker

./: .gitignore  CLAUDE.md  README.md  configuration.py  google_utils.py  main.py  market_making.py  pyproject.toml  requirements.txt  update_markets.py  update_stats.py  utils.py
analysis/: backtest_results.csv  mean_reversion_analysis_results.csv  strategy_analysis.ipynb
data_updater/: activity_metrics.py  find_markets.py  google_utils.py  trading_utils.py
poly_data/: polymarket_client.py
poly_stats/: account_stats.py
poly_utils/: market_utils.py
scripts/: trading_analysis.ipynb  trading_dump.ipynb
telemetry/: __init__.py  grafana_operational_dash.json  otel-collector-config.yaml  run_collector.sh
test/: test_activity_metrics.py  test_market_selection.py  verify_telemetry.py
trading_bot/: data_processing.py  data_utils.py  global_state.py  market_manager.py  market_selection.py  order_books.py  orders_in_flight.py  polymarket_client.py  task_scheduler.py  trading.py  trading_utils.py  volatility_tracker.py  websocket_handlers.py
trading_bot/market_making/: mm_market_selection.py  mm_trading.py
trading_bot/market_strategy/: __init__.py  ans_derisked_strategy.py  ans_strategy.py  glft_strategy.py  strategy_factory.py
