[project]
name = "poly-maker"
version = "0.1.0"
description = "A market making bot for Polymarket prediction markets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "cryptography",
    "eth-account",
    "eth-utils",
    "google-auth",
    "growthbook",
    "gspread",
    "gspread-dataframe",
    "logan-log-viewer",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-sdk",
    "pandas",
    "poly-eip712-structs",
    "py-clob-client",
    "py-order-utils",
    "python-dotenv",
    "requests",
    "scipy",
    "sortedcontainers",
    "web3",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "trading_bot",
    "poly_utils",
    "poly_stats",
    "data_updater",
    "telemetry",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.uv.sources]
logan-log-viewer = { git = "https://github.com/merijjeyn/logan.git" }
